--- a/pages/donate/style.css
+++ b/pages/donate/style.css
@@ -34,6 +34,7 @@
 
   body {
     font-family: "Roboto", "Arial", sans-serif;
+    margin:0%;
   }
 
   .section1{
@@ -42,7 +43,6 @@
     background-size: cover;
     width: 100vw;
     height: 1000px;
-    margin-bottom: 8%;
   }
   .header{
     width: 100vw;
@@ -109,24 +109,7 @@
     letter-spacing: 0em;
 
   }
-  .circle_text{   
-    position: absolute;
-    width: 500.31px;
-    height: 400px;
-    left: calc(50% - 500.31px/2 + 330.15px);
-    top: 166px;
 
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 106.496px;
-    line-height: 75%;
-    text-align: center;
-    text-transform: uppercase;
-    color: #FFFFFF;
-
-  }
-  
   main{
     height: 1482px;
     left: 0px;
@@ -135,6 +118,98 @@
     background: linear-gradient(315.75deg, rgba(254, 210, 144, 0.7) 30.06%, #FEBDAB 100.95%, rgba(254, 210, 144, 0.7) 106.36%), linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%), linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%);
   }
   
+  .pick_and_feed{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    width:80%;
+    padding: 3% 3% 3% 3%;
+  }
+
+  .pick_header{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 36px;
+    line-height: 130%;
+    color: #FFFFFF; 
+  }
+
+  .pick_header > p {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 140%;
+    /* or 22px */
+
+
+    color: #FFFFFF;
+    margin:0;
+  }
+
+  .next_header>p{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 36px;
+    line-height: 130%;
+    /* identical to box height, or 47px */
+
+
+    /* or3 */
+
+    color: #FE9013;
+  }
+  .inner_block{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    width:100%;
+    height: 964px;
+    left: 220px;
+    right: 220px;
+    top: 804px;
+
+    background: rgba(255, 255, 255, 0.52);
+    backdrop-filter: blur(2px);
+    /* Note: backdrop-filter has minimal browser support */
+
+    border-radius: 20px;
+  }
+
+  .inner_block_header>p{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 48px;
+    line-height: 120%;
+    /* identical to box height, or 58px */
+    
+    text-align: center;
+    
+    /* or3 */
+    
+    color: #FE9013;
+  }
+  .second_inner_block_header{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 120%;
+    /* identical to box height, or 29px */
+
+
+    color: #333B41;
+    margin-bottom: 10%;
+  }
+
+  .bear_picture{
+    display:flex;
+    justify-content: space-around;
+  }
+
   footer{
     display: grid;
     grid-template-areas: 
