--- a/pages/donate/style.css
+++ b/pages/donate/style.css
@@ -1,35 +1,44 @@
-@font-face {
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
+/*-----------------------------------------*/
+:root{
+    /*font*/
+    --body-font: 'Roboto', sans-serif;
+    /*typography*/
+    --h1-size: 114px;
+    --h2-size: 48px;
+    --h3-size: 36px;
+    --subtitle-size:24px;
+    --body-btn-size:16px;
+    --body-size:16px;
+    --small-p-size:15px;
+
+    /*font-weight*/
+    --font-light: 300;
+    --font-regular: 400;
+    --font-medium:500;
+    --font-bold:700;
+    /*line height*/
+    --h1-line-height:80%;
+    --h2-line-height:120%;
+    --h3-line-height:130%;
+    --subtitle-line-height:120%;
+    --body-btn-line-height:140%;
+    --body-line-height:140%;
+    --small-p-line-height:120%;
+}
+
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
     font-family: "Roboto";
     font-style: normal;
-    font-weight: 400;
-
-    src: local("Roboto"),
-         url("/fonts/roboto.woff2") format("woff2"),
-         url("/fonts/roboto.woff") format("woff");
+    color: #ffffff;
   }
-
-  @font-face {
-    font-family: "Roboto";
-    font-style: medium;
-    font-weight: 500;
-
-    src: local("Roboto"),
-         url("/fonts/roboto.woff2") format("woff2"),
-         url("/fonts/roboto.woff") format("woff");
-  }
-
-  @font-face {
-    font-family: "Roboto";
-    font-style: bold;
-    font-weight: 700;
-
-    src: local("Roboto"),
-         url("/fonts/roboto.woff2") format("woff2"),
-         url("/fonts/roboto.woff") format("woff");
-  }
-
-  html{
-    box-sizing: border-box;
+  
+  html {
+    scroll-behavior: smooth;
   }
 
   body {
@@ -42,7 +51,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     width: 100vw;
-    height: 1000px;
+    height: 700px;
   }
   .header{
     width: 100vw;
@@ -58,8 +67,8 @@
     padding: 1% 10% 0 10%;
   }
 
-  a:hover{
-    color: #FE9013;
+  a:hover, a:active {
+    color: #fe9013;
   }
 
   .nav-item{
@@ -111,17 +120,13 @@
 
   main{
     height: 1482px;
-    left: 0px;
-    right: 0px;
-    top: 466px;
+
     background: linear-gradient(315.75deg, rgba(254, 210, 144, 0.7) 30.06%, #FEBDAB 100.95%, rgba(254, 210, 144, 0.7) 106.36%), linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%), linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%);
   }
   
   .pick_and_feed{
     display:flex;
     flex-direction: column;
-    align-items: center;
-    width:80%;
     padding: 3% 3% 3% 3%;
   }
 
@@ -132,19 +137,18 @@
     font-size: 36px;
     line-height: 130%;
     color: #FFFFFF; 
+    margin-bottom: 2%;
   }
 
-  .pick_header > p {
+  .pick_header_p{
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
     line-height: 140%;
-    /* or 22px */
-
-
+    text-align: justify;
     color: #FFFFFF;
-    margin:0;
+    margin-bottom:2%;
   }
 
   .next_header>p{
@@ -153,61 +157,162 @@
     font-weight: 400;
     font-size: 36px;
     line-height: 130%;
-    /* identical to box height, or 47px */
-
-
-    /* or3 */
-
     color: #FE9013;
+    margin-bottom:5%;
   }
+
   .inner_block{
     display:flex;
     flex-direction: column;
+    width:80%;
     align-items: center;
-    width:100%;
-    height: 964px;
-    left: 220px;
-    right: 220px;
-    top: 804px;
-
+    margin: 0 auto;
     background: rgba(255, 255, 255, 0.52);
     backdrop-filter: blur(2px);
-    /* Note: backdrop-filter has minimal browser support */
-
     border-radius: 20px;
+    padding: 0 10% 0 10%;
   }
 
-  .inner_block_header>p{
+  .inner_block_header{
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
     font-size: 48px;
     line-height: 120%;
-    /* identical to box height, or 58px */
-    
     text-align: center;
-    
-    /* or3 */
-    
     color: #FE9013;
+    padding-top: 5%;
+    margin-bottom: 5%;
   }
+
   .second_inner_block_header{
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
     font-size: 24px;
     line-height: 120%;
-    /* identical to box height, or 29px */
-
-
     color: #333B41;
     margin-bottom: 10%;
   }
 
+  .number{
+    text-align:center;
+  }
+
+  .number_text{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 140%;   
+    text-align: center;
+    color: #333B41;
+    
+  }
+
+  .multiply{
+    height: 7%;
+    margin-right: 5%;
+  }
+
   .bear_picture{
-    display:flex;
+    display: flex;
+    justify-content: center;
+
+    align-items: center;
+    margin-bottom: 10%;
+  }
+ 
+  .amount_line_text{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 140%;
+    color: #000000;
+  }
+
+  .choose_amount_line{
+    margin-bottom: 10%;
+  }
+    
+
+  .amount_line{
+    position: relative;
+    background-image: url("../../assets/images/donation/Rectangle 11.png");
+    background-repeat: no-repeat;
+  }
+
+  
+  
+
+  .amount_line_scale_divisions{
+    position: absolute; 
+    display: flex;
     justify-content: space-around;
   }
+
+  .choose_amount_input{
+    box-sizing: border-box;
+    border: 1px solid #929699;
+    border-radius: 2px;
+    width: 268px;
+    height: 64px;
+    margin-bottom: 5%;
+  }
+
+  .anotherAmout{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 140%;
+    color: #929699;
+    align-self: center;
+    padding: 5% 0 0 2%;
+    margin-bottom: 5%;
+  }
+
+  .radio{
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 5%;
+    width: 40%;
+    font-style: normal;
+
+  }
+
+  .radio_circle{
+    box-sizing: border-box;
+    border: 1px solid #FE9013;
+    margin-right: 5%;
+  }
+
+  .radio_text{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 140%;
+    color: #333B41;
+  }
+
+  .feed_button{
+    background-color: transparent;
+    border: none;
+    margin-bottom: 5%;
+  }
+
+  .shareText{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 140%;
+    color: #333B41;
+    margin-bottom: 5%;
+    padding-left: 2%;
+  } 
 
   footer{
     display: grid;
@@ -217,7 +322,6 @@
       "cocialMedia  footer_menu  desined";
     grid-template-columns: 1fr  1.5fr 1fr;
     grid-template-rows: 1fr 1fr 2fr ;
-    width: 80%;
     height: 443px;   
     background: #111115;
     padding: 3% 10% 3% 10%;
@@ -286,7 +390,7 @@
   }
 
   .footer_nav-item{
-    padding: 0 5% 0 5%;
+ 
   }
 
   .signature{
