--- a/pages/main/style.css
+++ b/pages/main/style.css
@@ -1,37 +1,45 @@
-  @font-face {
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
+/*-----------------------------------------*/
+:root{
+    /*font*/
+    --body-font: 'Roboto', sans-serif;
+    /*typography*/
+    --h1-size: 114px;
+    --h2-size: 48px;
+    --h3-size: 36px;
+    --subtitle-size:24px;
+    --body-btn-size:16px;
+    --body-size:16px;
+    --small-p-size:15px;
+
+    /*font-weight*/
+    --font-light: 300;
+    --font-regular: 400;
+    --font-medium:500;
+    --font-bold:700;
+    /*line height*/
+    --h1-line-height:80%;
+    --h2-line-height:120%;
+    --h3-line-height:130%;
+    --subtitle-line-height:120%;
+    --body-btn-line-height:140%;
+    --body-line-height:140%;
+    --small-p-line-height:120%;
+}
+
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
     font-family: "Roboto";
     font-style: normal;
-    font-weight: 400;
-
-    src: local("Roboto"),
-         url("/fonts/roboto.woff2") format("woff2"),
-         url("/fonts/roboto.woff") format("woff");
+    color: #ffffff;
   }
-
-  @font-face {
-    font-family: "Roboto";
-    font-style: medium;
-    font-weight: 500;
-
-    src: local("Roboto"),
-         url("/fonts/roboto.woff2") format("woff2"),
-         url("/fonts/roboto.woff") format("woff");
+  
+  html {
+    scroll-behavior: smooth;
   }
-
-  @font-face {
-    font-family: "Roboto";
-    font-style: bold;
-    font-weight: 700;
-
-    src: local("Roboto"),
-         url("/fonts/roboto.woff2") format("woff2"),
-         url("/fonts/roboto.woff") format("woff");
-  }
-
-  html{
-    box-sizing: border-box;
-  }
-
   body {
     font-family: "Roboto", "Arial", sans-serif;
   }
