--- a/pages/donate/style.css
+++ b/pages/donate/style.css
@@ -51,24 +51,27 @@
     background-repeat: no-repeat;
     background-size: cover;
     width: 100vw;
-    height: 700px;
+    height: 62vh;
+    background-position: center center;
   }
+
   .header{
     width: 100vw;
-    height: 100px;
+    height: 73px;
     background-color: #000000;
     position: relative;
-
   }
+
   .menu{
     display: flex;
     flex-direction: row;
     align-items: center;
-    padding: 1% 10% 0 10%;
+    padding: 1% 10% 0 13%;
   }
 
-  a:hover, a:active {
-    color: #fe9013;
+  a:hover,
+  a.nav-item:active {
+    color: #FE9013;
   }
 
   .nav-item{
@@ -76,14 +79,16 @@
     font-family: Roboto;
     font-size: 16px;
     font-weight: 500;
-    line-height: 22px;
+    line-height: 15px;
     letter-spacing: 0em;
     text-align: left;
     vertical-align:middle;
-    margin: 0 3%;
+    margin: 0 4% 0 0;
   }
 
   .logo{
+    display: flex;
+    justify-content: center;
     color: #FFFFFF;
     font-family: Roboto;
     font-size: 19px;
@@ -96,11 +101,15 @@
   .logo_reg{
     position: relative;
     display: inline-block;
+    align-items: center;
     width: 82px;
     height: 52px;
     border: 1px solid #FFFFFF;
     border-radius: 2px;
-    margin-left: 15%;
+    margin-right: 5%;
+    background-image: url('/online-zoo/assets/images/donation/bamboo.png');
+    background-repeat: no-repeat;
+    background-position: left bottom;
   }
 
   .logo_reg:hover{
@@ -108,7 +117,7 @@
   }
 
   .desined{
-    margin-left: auto;
+    margin-left: 30%;
     color: #FFFFFF;
     font-family: Roboto;
     font-size: 19px;
@@ -127,17 +136,18 @@
   .pick_and_feed{
     display:flex;
     flex-direction: column;
-    padding: 3% 3% 3% 3%;
+    padding: 0% 13% 0% 13%;
   }
 
   .pick_header{
     font-family: 'Roboto';
-    font-style: normal;
+    font-style: light;
     font-weight: 400;
     font-size: 36px;
     line-height: 130%;
     color: #FFFFFF; 
-    margin-bottom: 2%;
+    margin-bottom: 1%;
+    padding-top: 3%;
   }
 
   .pick_header_p{
@@ -148,7 +158,7 @@
     line-height: 140%;
     text-align: justify;
     color: #FFFFFF;
-    margin-bottom:2%;
+    margin-bottom:3%;
   }
 
   .next_header>p{
@@ -158,19 +168,16 @@
     font-size: 36px;
     line-height: 130%;
     color: #FE9013;
-    margin-bottom:5%;
+    margin-bottom:6%;
   }
 
   .inner_block{
     display:flex;
     flex-direction: column;
-    width:80%;
-    align-items: center;
-    margin: 0 auto;
     background: rgba(255, 255, 255, 0.52);
     backdrop-filter: blur(2px);
     border-radius: 20px;
-    padding: 0 10% 0 10%;
+    padding: 0 3% 0 8%;
   }
 
   .inner_block_header{
@@ -181,8 +188,8 @@
     line-height: 120%;
     text-align: center;
     color: #FE9013;
-    padding-top: 5%;
-    margin-bottom: 5%;
+    padding-top: 3%;
+    margin-bottom: 3%;
   }
 
   .second_inner_block_header{
@@ -192,11 +199,13 @@
     font-size: 24px;
     line-height: 120%;
     color: #333B41;
-    margin-bottom: 10%;
+    margin-bottom: 5%;
+    
   }
 
   .number{
     text-align:center;
+    padding-right:1%
   }
 
   .number_text{
@@ -212,19 +221,19 @@
 
   .multiply{
     height: 7%;
-    margin-right: 5%;
+    margin: 0 3% 0 3%;
   }
 
   .bear_picture{
     display: flex;
-    justify-content: center;
+    padding-left: 22%;
 
     align-items: center;
-    margin-bottom: 10%;
+    margin-bottom: 6%;
   }
 
   .choose_amount_line{
-    margin-bottom: 10%;
+    margin-bottom: 5%;
   }
 
   .amount_line_text{
@@ -234,36 +243,57 @@
     font-size: 16px;
     line-height: 140%;
     color: #000000;
+    margin-bottom: 1%;
   }
 
   .amount_line{
     background-image: url("../../assets/images/donation/Rectangle 11.png");
     background-repeat: no-repeat;
     position:relative;
+    width:100%;
+    align-self: center;
+  }
+
+  .amount_line_relative{ 
+    position: relativ;
+    width: 83%;
+    padding-left: 3%;
   }
 
   .amount_line_scale_divisions{
     display: flex;
-    justify-content:space-between;
+    justify-content:space-around;
+    width: 90%;
+  }
+
+  .amountDevision{  
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 26px;
+    line-height: 140%;
+    /* or 36px */
+    text-transform: uppercase;  
+    margin-top: 10%;
+  }
+
+  .amountDevision>p{
+    color: #333B41 !important;
   }
 
   .division{
     position: absolute;
-    z-index: 1;
-    top: 0; 
-    margin-bottom: 15%;
+    top: 10%;
   }
 
-  .input_devision{
-    color: #FFEE2E;
-  }
-  
   .choose_amount_input{
-    box-sizing: border-box;
-    border: 1px solid #929699;
-    border-radius: 2px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-self: center;
+    box-sizing: border-box;   
     width: 268px;
-    height: 64px;
+    height: 84px;
     margin-bottom: 5%;
   }
 
@@ -274,17 +304,23 @@
     font-size: 16px;
     line-height: 140%;
     color: #929699;
+    background: #fde4d7;
     align-self: center;
-    padding: 5% 0 0 2%;
+    padding: 5% 0 3% 2%;
     margin-bottom: 5%;
+    width: 269px;
+    height: 64px;
+    border: 1px solid #929699;
+    border-radius: 2px;
   }
 
   .radio{
     display: flex;
-    justify-content: space-around;
-    margin-bottom: 5%;
-    width: 40%;
+    margin: 0 0 5% 0;
+    width: 269px;
     font-style: normal;
+    justify-content: space-around;
+
 
   }
 
@@ -318,6 +354,7 @@
     color: #333B41;
     margin-bottom: 5%;
     padding-left: 2%;
+    text-align: center;
   } 
 
   footer{
@@ -327,10 +364,10 @@
       "donate  .  .  "
       "cocialMedia  footer_menu  desined";
     grid-template-columns: 1fr  1.5fr 1fr;
-    grid-template-rows: 1fr 1fr 2fr ;
+    grid-template-rows: 1fr 1fr 1.5fr ;
     height: 443px;   
     background: #111115;
-    padding: 3% 10% 3% 10%;
+    padding: 3% 14% 0% 14%;
   }
 
   .logo_reg{
@@ -348,30 +385,52 @@
   }
 
   .subscribe_header{
-    padding-left: 10%;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 120%;
+    /* identical to box height, or 29px */
+      color: #FFFFFF;
   }
 
   .email_subtmit{
     display: flex;
-    justify-content: end;
   }
 
   .subscribe_input{
     background-color: #000000;
     box-sizing: border-box;
+    width: 228px;
     height: 42px;
+    border: 0.7px solid #FE9013;
     border-radius: 2px;
-    border: 0.7px solid;
-    border-image-source: linear-gradient(113.96deg, #F9804B 1.49%, #FE9013 101.44%);
   }
 
   .subscribe_input::placeholder{
-    color:#F5F7F6;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 140%;
+    color: #BDBDBD;
+    padding-left: 3%;
   }
 
-  .submit{
-    background-color: transparent;
-    border: none;
+  .submit {
+    background: #F1F3F2;
+    box-sizing: border-box;
+    border: 1px solid #333B41;
+    border-radius: 5px;
+    width: 129px;
+    height: 42px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 140%;
+    color: #000000;
+    margin-left: 2%;
   }
 
   .donate{
@@ -393,10 +452,8 @@
 
   .footer_menu{
     grid-area: footer_menu;
-  }
-
-  .footer_nav-item{
- 
+    display: flex;
+    justify-content:space-around;
   }
 
   .signature{
