--- a/pages/main/style.css
+++ b/pages/main/style.css
@@ -124,9 +124,8 @@
     font-size: 19px;
     font-weight: 400;
     line-height: 23px;
-    letter-spacing: 0em;
-
   }
+
   .circle_text{   
     position: absolute;
     width: 500.31px;
@@ -174,9 +173,8 @@
   .backstage {
     position: relative;
     width: 100vw;
-    height: 63vh;
     display: flex;
-    padding-bottom: 10%;
+    padding-bottom: 10vh;
     padding-top: 8%;
     padding-left: 14%;
   } 
